better truncation fix in two places (bug 731190) (bug 731205)

--- a/media/css/devreg/manage.less
+++ b/media/css/devreg/manage.less
@@ -106,6 +106,11 @@
     line-height: 1.3;
 }
 
+.item.island .trans {
+    max-width: 530px;
+    word-wrap: break-word;
+}
+
 #submit-describe {
     #trans-name {
         display: inline-block;
