--- a/media/css/devreg/submit-details.less
+++ b/media/css/devreg/submit-details.less
@@ -77,6 +77,7 @@
             color: @blue;
             font-weight: bold;
             margin: 0 0 10px;
+            word-wrap: break-word;
         }
         .details-url {
             margin: 10px 0;
